--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -46,7 +46,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
