--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@ NAV RESPONSIVE BOOTSTRAP
 -->
 
     
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav id="navbarPrincipal" class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <nav class="navbar bg-body-tertiary">
-        <div class="container">
+      <nav class="navbar bg-white">
+        <div class="container bg-white">
           <a class="navbar-brand" href="./index.html">
-            <img src="./img/SMARTKEY SOFTWARE-05.jpg" alt="logo-smartkey" width="auto" height="50">
+            <img src="./img/logo-smart.png" alt="logo-smartkey" width="auto" height="120">
           </a>
         </div>
       </nav>
