--- a/pages/cashless.html
+++ b/pages/cashless.html
@@ -14,12 +14,12 @@
 <body>
 
     
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav id="navbarPrincipal" class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <nav class="navbar bg-body-tertiary">
-            <div class="container">
-              <a class="navbar-brand" href="./index.html">
-                <img src="../img/SMARTKEY SOFTWARE-05.jpg" alt="logo-smartkey" width="auto" height="50">
+          <nav class="navbar bg-white">
+            <div class="container bg-white">
+              <a class="navbar-brand" href="../index.html">
+                <img src="../img/logo-smart.png" alt="logo-smartkey" width="auto" height="120">
               </a>
             </div>
           </nav>
@@ -29,7 +29,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
