--- a/pages/cashless.html
+++ b/pages/cashless.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../sass/main.css">
 </head>
 <body>
 
@@ -56,10 +57,22 @@
           </div>
         </div>
       </nav>
-    <h1 class="titulo-test">CASHLESS</h1>
-    <section class="section-test">
 
-    </section>
+      <section class="container-solucion">
+
+          <h1 class="titulo-solucion">CASHLESS</h1>
+  
+  
+          <div class="banner-solucion">
+  
+            <img class="container-fluid" src="../img/CASHLESS-EXPLAINED.2023.jpg" alt="acceso-explained">
+        
+          </div>
+  
+      </section>
+
+
+
 </body>
 <footer>
 
